--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0" />
-        <title>DTP Team project</title>
+        <title>VeloSafety - DTP Team project</title>
     </head>
     <body>
         <div id="app"></div>
